(fix): lineCounter